<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.safetyfirst.SignUpActivity"
    android:background="@color/black" >
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="false"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:src="@drawable/uta_copy" />

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:text="@string/firstName"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignBottom="@+id/textViewFirstName"
        android:layout_alignParentRight="true"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#FFFFFF" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewFirstName"
        android:layout_below="@+id/textViewFirstName"
        android:layout_marginTop="35dp"
        android:text="@string/lastName" 
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/textViewLastName"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="text" 
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/textViewUtaEmailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignLeft="@+id/textViewLastName"
        android:layout_below="@+id/textViewLastName"
        android:layout_marginTop="35dp"
        android:text="@string/utaEmailId"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/editTextUtaEmailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_alignBottom="@+id/textViewUtaEmailId"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textViewSignUpPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewUtaEmailId"
        android:layout_below="@+id/textViewUtaEmailId"
        android:layout_marginTop="35dp"
        android:layout_centerInParent="true"
        android:textColor="#FFFFFF"
        android:text="@string/signUpPassword" />

    <EditText
        android:id="@+id/editTextSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/textViewSignUpPassword"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:layout_centerInParent="true"
        android:textColor="#FFFFFF"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextSign"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:text="@string/register"
        android:textColor="#FFFFFF" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_centerVertical="true"
        android:layout_marginLeft="14dp"
        android:text="Student"
        android:textColor="@color/black"
        android:checked= "true"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/imageView1"
        android:layout_centerVertical="true"
        android:layout_marginRight="30dp"
        android:text="Police"
        android:textColor="@color/black" />

</RelativeLayout>
